--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33610758-d8f8-45cb-a387-6dd10cac999a",
    "metadata": {},
    "source": [
     "{/* cspell:ignore prodxz delx delz dely prodxy uparrow downarrow */}\n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39679663-00f6-48d4-acaf-d380b464b3fc",
    "metadata": {},
    "source": [
     "For this Qiskit in Classroom module, students must have a working Python environment with the following packages installed:\n",
@@ -27,7 +25,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887242b5-b3c0-4ccc-bbc8-23477a4be991",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "\n",
+    "\n",
+    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
+    "\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"Quantum Uncertainty: Why We Can’t Know Everything\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://youtu.be/3h3pwrECbb8?si=-hu68FoAHeZheDRi\"\n",
+    "  src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit/YT-thumb.avif\"\n",
+    "/>\n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -51,7 +68,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5027d775-cab5-4480-a1ef-5f2820726688",
    "metadata": {},
    "source": [
     "## Simple check of intuition\n",
@@ -71,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "554e23b8-cc66-44ef-aa5d-882c799a05e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +106,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fbb7b4d4-6ab6-4d96-b6f4-45e36dcb2d40",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +131,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0232ec02-5cbc-42da-9b5e-33f825319242",
    "metadata": {},
    "source": [
     "If a student exhausts their available quantum computing time during the lesson, the lines below can be un-commented and used to set up a simulator that partly mimics the noise behavior of the quantum computer selected above."
@@ -126,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8dd6bb22-7556-4270-b7f0-613d263f7661",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +152,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2011b3d6-8af6-4b55-b9aa-2207eb055d22",
    "metadata": {},
    "source": [
     "You might recall that an eigenstate of one operator, Z, is not an eigenstate of another operator X. We will observe that now, experimentally by making measurements along the $x$ and $z$ axes. For the measurement along $z$, we simply use ```qc.measure()```, because IBM quantum computers are structured to measure along $z$. But to measure along $x$, we must rotate the system to effectively move the $x$ axis up to the orientation along which we measure. This is accomplished with a Hadamard gate. There is a similar step required for measurements along $y$. The necessary steps are collected here for convenience:\n",
@@ -157,7 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "05d0070d-89c1-47b2-b458-489d81b48836",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +207,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db7777b0-c308-4dab-afcf-079cd4e0e24b",
    "metadata": {},
    "source": [
     "### Step 2: Optimize problem for quantum execution\n",
@@ -208,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e47dc1a7-e0c5-400e-86d0-56e88db392e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +231,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a05f58c-39a4-45d1-8e7f-02082d6f411a",
    "metadata": {},
    "source": [
     "### Step 3: Execute using Qiskit Runtime primitives\n",
@@ -236,7 +243,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ce364a07-a189-4d5a-8043-9b29a089507a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +264,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18efeaa9-c1a9-4730-83eb-c593007b2e85",
    "metadata": {},
    "source": [
     "### Step 4: Post-processing\n",
@@ -271,7 +276,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bf3850ce-25cb-4585-83af-c5624e8b7549",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +299,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb1a8cc5-2bd6-4511-951a-db85108bc237",
    "metadata": {},
    "source": [
     "If this convention does not appeal to you, you can use ```marginal_counts``` to visualize the results of each measurement separately:"
@@ -304,7 +307,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "40924dde-0473-47f0-8376-424569036fbb",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +331,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d9440f5b-48b0-457a-9aee-6f74d0df48b7",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +352,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d17fcd0-a2f4-45ba-8fa9-2f5de16a52a0",
    "metadata": {},
    "source": [
     "By default, states in Qiskit are initialized to the $|0\\rangle$ state. So it is no surprise that almost all of the first measurements yeilded $|0\\rangle$. Note however, that there was almost an even split in the second measurement (the one giving information about projections of the state onto $x$). It seems like this state that gives us a very predictable outcome of measurements along $z$ gives us a very unpredictable set of outcomes for measurements along $x$.\n",
@@ -361,7 +361,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ba26c51f-ff1c-4af8-8158-6fe3914cde3f",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +397,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "110e4922-f732-423c-8a58-f52fc2d72e4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "739a0783-0654-43ea-a979-5c96f30a582f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +428,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5fd5d284-4871-4fba-af3d-6ed1e4d23cf4",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +450,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b55bf34b-ecfc-49cd-9c7b-d684c28343b5",
    "metadata": {},
    "source": [
     "Here, we seem to have even less predictability! Previously, we at least knew what the outcome would be of the first measurement, now we have a fairly even distribution across all possible states. It's not too hard to see why this happened. We started in $|0\\rangle$, which is a 50-50 mixture of $|+\\rangle_x$ and $|-\\rangle_x$, according to\n",
@@ -468,7 +463,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f5d846-122a-45d8-931a-f1410c8c14be",
    "metadata": {},
    "source": [
     "We can quantify this using uncertainty, or variance. The \"uncertainty\" is often defined to be the square root of the \"variance\" of a distribution. That is, the uncertainty for some observable $S$ is denoted $\\Delta S$ and is given by\n",
@@ -505,7 +499,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bdd8941e-964c-4c3d-8861-a752e8a5db07",
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +550,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "990f90a3-6345-4c3b-9d80-88a48c41417a",
    "metadata": {},
    "source": [
     "According to our equation above,\n",
@@ -568,7 +560,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2b1d9609-de15-4532-92ba-16e323cdcb69",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +608,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78422827-ed71-47a1-91a3-f0be10c7ce34",
    "metadata": {},
    "source": [
     "We could do the same math as before, but we would see that the variance is again very close to 1.0. We could conclude that $\\Delta X \\Delta Z \\approx 1.0$. Indeed this approximately correct for the state we chose. But can we do better? Or worse?\n",
@@ -630,7 +620,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ad79e57a-46c7-410e-ac9b-18f3351e5ab4",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +674,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "901bec7f-6dc8-4111-b797-ffa451fe7540",
    "metadata": {},
    "source": [
     "The expectation value of $X$ should be close to 1.0, but should not exceed 1.0. Don't worry if it exceeds 1.0 by a very small amount. This can be attributed to factors like noise and/or readout error. Although this is a very important topic, we can ignore it for now.\n",
@@ -734,7 +722,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee91a35c-3fc3-4126-8214-ef95c4bba9be",
    "metadata": {},
    "source": [
     "Use the questions below to build some intuition for these findings:\n",
@@ -854,7 +841,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "000955ed-2e36-4e57-af9a-ad3b48080b6a",
    "metadata": {},
    "source": [
     "The test above only demonstrated the validity of the uncertainty relation for a single choice of state vector $|\\psi\\rangle = |+\\rangle_x$. To convince ourselves that this is generally consistent with experiment, we should carry out similar calculations using estimator for many choices of the state vector. Let's start by rotating our state vector away from the $z$ axis, using an ```RY``` gate to produce different initial states using a parameter $\\theta$."
@@ -863,7 +849,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a54e2b91-a644-4791-befd-0ea8b8db2aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,7 +899,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d3abf2c7-ad3c-459d-bf81-d6bc948886e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +921,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e7edbf45-1476-4e3d-9ee3-4a78ff175935",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +949,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c4707bd-802a-441f-9aa5-c4727527a38e",
    "metadata": {},
    "source": [
     "Note that the red curve $(\\Delta X \\Delta Z)$ is always greater than the orange curve $\\langle Y \\rangle.$ Sometimes the uncertainty product dips and is somewhat close to the limit, and other times it rises and is farther from the limit, but it always obeys the uncertainty relation.\n",
@@ -977,7 +959,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "08bcd116-137e-44ef-836e-f6024c5c230f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1011,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "41638dc0-72ec-4394-8a0c-650a6f73ec74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1033,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "bbf526d1-6518-4d51-8f6e-40c0b77f6cde",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1061,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55788685-bef9-45c0-be36-31dc6d207fce",
    "metadata": {},
    "source": [
     "Now we see that the limit on the uncertainty $(\\Delta X \\Delta Z)$ is being put to the test! The red curve comes much closer to the orange curve than before. In fact, in the absence of noise, the uncertainty relation would be exactly saturated ($(\\Delta X \\Delta Z) = \\langle Y \\rangle$) one point. In the presence of noise and readout error, it should not be surprising if a run occassionally yields $(\\Delta X \\Delta Z)$ very slightly larger than $\\langle Y \\rangle.$ This is not a true violation of uncertainty; it is just an artifact of non-zero error.\n",
@@ -1130,7 +1108,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aa76006-5536-4da4-9c39-087a313e9cd7",
    "metadata": {},
    "source": [
     "![A plot comparing uncertainty to the maximum expectation value of the Y operator.](/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit/checkin.avif)"
@@ -1138,7 +1115,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de61607-10f5-4df2-980b-d3aad49edcfd",
    "metadata": {},
    "source": [
     "### Check-in question:\n",
@@ -1197,7 +1173,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26575675-60ab-447f-864e-0544701c22b9",
    "metadata": {},
    "source": [
     "Challenge: Write code to scan through many values of $\\phi$, just as we scanned through many values of $\\theta$, and make a 3-D plot showing that the uncertainty relation is never violated. Pick any observables you like."
@@ -1205,7 +1180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f36c72c-79a9-49eb-8cf0-a9b810ef7201",
    "metadata": {},
    "source": [
     "### Critical concepts:\n",
@@ -1281,7 +1255,7 @@
  "metadata": {
   "description": "Learn what physical measurements affect each other and explore fundamental uncertainty in quantum mechanics using a real quantum computer",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1295,9 +1269,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.13"
   },
-  "title": "Exploring uncertainty with Qiskit"
+  "title": "Exploring uncertainty with Qiskit",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
