--- a/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit.ipynb
@@ -27,6 +27,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fba0059c-4008-4076-95f2-18dab949ca9e",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "\n",
+    "Click the image below to watch the module walkthrough by Dr. Katie McCormick.\n",
+    "\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"Superposition: The Quantum Principle That Changes Everything\"\n",
+    "  alt=\"YT thumbnail\"\n",
+    "  href=\"https://youtu.be/TZ-sUHK8vVQ?si=eWsPn1Vd6wDtt6Uh\"\n",
+    "  src=\"/learning/images/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit/YT-thumb.avif\"\n",
+    "/>\n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8ef56d8f-1358-4c3e-b1be-f56597a5ee89",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -1127,7 +1147,7 @@
  "metadata": {
   "description": "Learn about superposition and what it means for measurements on quantum computers.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1141,9 +1161,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.13"
   },
-  "title": "Superposition with Qiskit"
+  "title": "Superposition with Qiskit",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
