finish up lesson 3

--- a/learning/courses/utility-scale-quantum-computing/lesson-03-teleportation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/lesson-03-teleportation.ipynb
@@ -36,7 +36,7 @@
     "- **Quantum superdense coding**\n",
     "    How to send two bits of information by sending a single qubit to a distant friend (again using prior shared entangled qubits).\n",
     "\n",
-    "For more background relevant to these topics, we recommend lesson 4 in Basics of Quantum Information on [Entanglement in Action](learning/courses/basics-of-quantum-information/entanglement-in-action).\n",
+    "For more background relevant to these topics, we recommend lesson 4 in Basics of Quantum Information on [Entanglement in action](/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction).\n",
     "\n",
     "In the above description, an \"unknown quantum state\" simply refers to a state of the form described in the previous lesson:\n",
     "$$\n",
@@ -456,7 +456,7 @@
    "source": [
     "### Exercise 2: Estimate $r_y$ value\n",
     "Using the same logical arguments as before, we can rotate the system prior to measurement to learn about the $r_y$.\n",
-    "Try writing code yourself to estimate the value of $r_y$ using the quantum state tomography. You could start with the previous example, but make different rotations. (For more information about the various gates used, including ```sdg``` please refer [to the API reference](/docs/api/qiskit/qiskit.circuit.library.UGate/api/qiskit/qiskit.circuit.QuantumCircuit#sdg).)\n",
+    "Try writing code yourself to estimate the value of $r_y$ using the quantum state tomography. You could start with the previous example, but make different rotations. (For more information about the various gates used, including ```sdg```, please refer [to the API reference.](/docs/api/qiskit/qiskit.circuit.library.SdgGate)\n",
     "\n",
     "__Solution__:"
    ]
@@ -615,7 +615,7 @@
     "    - If “11”, Bob applies iY = ZX gate\n",
     "5. Bob's part of the e-bit becomes $|\\psi \\rangle$.\n",
     "\n",
-    "This is also worked out in more detail in [Basics of Quantum Information](/learning/courses/basics-of-quantum-information/entanglement-in-action#teleportation). But the situation will become more clear as we instantiate this in Qiskit."
+    "This is also worked out in more detail in [Basics of Quantum Information](/learning/courses/basics-of-quantum-information/entanglement-in-action/introduction). But the situation will become more clear as we instantiate this in Qiskit."
    ]
   },
   {
